--- a/style.css
+++ b/style.css
@@ -41,6 +41,8 @@ main nav {
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
   position: fixed;
+  top: 0;
+  z-index: 1000;
 }
 main nav .logo {
   text-transform: uppercase;
