--- a/style.scss
+++ b/style.scss
@@ -58,6 +58,8 @@ main {
         backdrop-filter: blur(5px);
 
         position: fixed;
+        top: 0;
+        z-index: 1000;
 
         .logo {
             text-transform: uppercase;
