--- a/style.css
+++ b/style.css
@@ -261,6 +261,7 @@ main footer {
   flex-direction: column;
   justify-content: center;
   gap: 1rem;
+  align-items: center;
   background-color: #1e1e1e;
 }
 main footer .company {
