--- a/style.scss
+++ b/style.scss
@@ -324,6 +324,7 @@ main {
         padding: 1rem;
 
         @include flexColumnCenter(1rem);
+        align-items: center;
 
         background-color: #1e1e1e;
 
